--- a/notes/session3_strings_lists.ipynb
+++ b/notes/session3_strings_lists.ipynb
@@ -2266,10 +2266,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "hXeCKpMROj7e"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "[9, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "area = int(input())\n",
+    "ans = []\n",
+    "while area>0:\n",
+    "    temp = int((area**(1/2))//1)\n",
+    "    ans.append(temp*temp)\n",
+    "    area -= (temp*temp)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
